--- a/index.html
+++ b/index.html
@@ -66,4 +66,9 @@
 
     <a class="button" href="http://177.32.240.244:5050/" target="_blank">
       <!-- Ícone E-mail Marketing -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8l-192-160C302.4 25.5 289.5 20.5 276 24.1s-23.5 14.5-26.9 27.8L221.2 151.2l-113.7 17.6c-13.3 2.
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8l-192-160C302.4 25.5 289.5 20.5 276 24.1s-23.5 14.5-26.9 27.8L221.2 151.2l-113.7 17.6c-13.3 2.1-24.5 11.2-28.6 24.1s-.3 26.3 9.2 35.5l144 136-34 132.1c-3.4 13.2 1.3 27.3 11.9 35.8s25.2 10.4 37.3 3.6l160-96c11.1-6.7 17.4-19 16.2-31.8l-20.7-217.1 113.5-84.6c10.1-7.6 13.8-21.3 9.3-32.6z"/></svg>
+      HubSpot E-mail Tool
+    </a>
+  </div>
+</body>
+</html>
