--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
+      justify-content: center;
     }
 
     .button {
@@ -52,6 +53,8 @@
       width: 24px;
       height: 24px;
       fill: white;
+      vertical-align: middle;
+      flex-shrink: 0;
     }
   </style>
 </head>
@@ -59,15 +62,27 @@
   <h1>Bem-vindo! Escolha um serviço:</h1>
   <div class="btn-container">
     <a class="button" href="http://177.32.240.244:8080/" target="_blank">
-      <!-- Ícone CasaOS -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M336 64V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64L34.5 254.6c-6.6 5.2-7.7 14.7-2.5 21.2s14.7 7.7 21.2 2.5L64 265.1V464c0 26.5 21.5 48 48 48H528c26.5 0 48-21.5 48-48V265.1l10.8 13.2c5.2 6.6 14.7 7.7 21.2 2.5s7.7-14.7 2.5-21.2L336 64zM320 96L544 288V464c0 8.8-7.2 16-16 16H416V336c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32V480H112c-8.8 0-16-7.2-16-16V288L320 96z"/></svg>
+      <!-- CasaOS Icon (Home) -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+        <path d="M541 229.16 512 206.52V104a24 24 0 0 0-24-24h-56a24 24 0 0 0-24 24v36.75L314.16 43a32 32 0 0 0-40.24 0L35 229.16a16 16 0 0 0-1.16 22.59l21.41 25.89a16 16 0 0 0 22.59 1.17L96 256.8V456a24 24 0 0 0 24 24h112V344a24 24 0 0 1 24-24h64a24 24 0 0 1 24 24v136h112a24 24 0 0 0 24-24V256.8l18.16 21.81a16 16 0 0 0 22.59-1.17l21.41-25.89a16 16 0 0 0-1.16-22.59z"/>
+      </svg>
       Acessar CasaOS
     </a>
 
     <a class="button" href="http://177.32.240.244:5050/" target="_blank">
-      <!-- Ícone E-mail Marketing -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M502.3 190.8l-192-160C302.4 25.5 289.5 20.5 276 24.1s-23.5 14.5-26.9 27.8L221.2 151.2l-113.7 17.6c-13.3 2.1-24.5 11.2-28.6 24.1s-.3 26.3 9.2 35.5l144 136-34 132.1c-3.4 13.2 1.3 27.3 11.9 35.8s25.2 10.4 37.3 3.6l160-96c11.1-6.7 17.4-19 16.2-31.8l-20.7-217.1 113.5-84.6c10.1-7.6 13.8-21.3 9.3-32.6z"/></svg>
+      <!-- E-mail Icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <path d="M502.3 190.8 327.4 338.2c-21.5 18.3-52.7 18.3-74.2 0L9.7 190.8C3.8 186 0 178.8 0 171V96c0-35.3 28.7-64 64-64h384c35.3 0 64 28.7 64 64v75c0 7.8-3.8 15-9.7 19.8zM0 224v192c0 35.3 28.7 64 64 64h384c35.3 0 64-28.7 64-64V224l-165.7 141c-33.5 28.5-82.1 28.5-115.6 0L0 224z"/>
+      </svg>
       HubSpot E-mail Tool
+    </a>
+
+    <a class="button" href="http://177.32.240.244:5000/" target="_blank">
+      <!-- Google Icon (Chart/Analytics) -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+        <path d="M511.1 288h-32c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32v-96c0-17.7-14.3-32-32-32zm-128-96h-32c-17.67 0-32 14.33-32 32v192c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V224c0-17.7-14.3-32-32-32zm-128 64h-32c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V288c0-17.7-14.3-32-32-32zM127.1 160h-32c-17.67 0-32 14.33-32 32v224c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V192c0-17.7-14.3-32-32-32z"/>
+      </svg>
+      Conversões Offline
     </a>
   </div>
 </body>
