--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     </a>
 
   <a class="button" href="http://177.32.240.244:5230/" target="_blank">
-    <!-- Pena (Feather) Icon -->
+    <!-- Ícone de Pena (Feather) - Estilo minimalista -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-      <path d="M278.9 512c-47.1 0-90.2-17.7-123.4-49.9l-75.7 18.9c-4.9 1.2-10-.2-13.6-3.9s-5.1-8.8-3.9-13.6l18.9-75.7C29.7 365.3 12 322.1 12 275c0-65.4 25.5-126.9 71.9-173.3C130.3 55.2 191.6 29.5 257 29.5c40.7 0 81 9.9 116.6 28.6l7.2 3.7c11.7 6.1 15.9 20.4 9.1 31.4l-90.5 147.2 60.6 60.6 147.2-90.5c11-6.8 25.3-2.6 31.4 9.1l3.7 7.2c18.7 35.6 28.6 75.9 28.6 116.6 0 65.4-25.7 126.7-71.8 173.1C405.6 486.5 344.1 512 278.9 512z"/>
+      <path d="M109.7 402.3c4.7-4.7 9.4-9.3 14.1-13.9L368 144c14.8-14.8 14.8-38.8 0-53.6s-38.8-14.8-53.6 0L70.2 334.7c-9.6 9.6-16.2 21.4-19.2 34.4L32 480l110.9-19c13-3 24.9-9.6 34.5-19.2l25.4-25.4c12.1 2.5 24.8 3.7 37.6 3.7 114.9 0 208-93.1 208-208 0-12.7-1.3-25.3-3.7-37.6l-25.4 25.4c-9.6 9.6-16.2 21.4-19.2 34.4L109.7 402.3z"/>
     </svg>
     Memos Notes
   </a>
