--- a/index.html
+++ b/index.html
@@ -83,9 +83,16 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
       <path d="M109.7 402.3c4.7-4.7 9.4-9.3 14.1-13.9L368 144c14.8-14.8 14.8-38.8 0-53.6s-38.8-14.8-53.6 0L70.2 334.7c-9.6 9.6-16.2 21.4-19.2 34.4L32 480l110.9-19c13-3 24.9-9.6 34.5-19.2l25.4-25.4c12.1 2.5 24.8 3.7 37.6 3.7 114.9 0 208-93.1 208-208 0-12.7-1.3-25.3-3.7-37.6l-25.4 25.4c-9.6 9.6-16.2 21.4-19.2 34.4L109.7 402.3z"/>
     </svg>
-    Memos Notes
+    Memos Note
   </a>
-    
+
+<a class="button" href="http://177.32.240.244:6806/" target="_blank">
+  <!-- Ícone de Cubo (representando estrutura/modularidade) -->
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <path d="M256 0L32 128v256l224 128 224-128V128L256 0zm0 45.3l192 109.8v202.5L256 467.6 64 357.6V155.1L256 45.3zM128 192h256v32H128v-32zm0 96h192v32H128v-32z"/>
+  </svg>
+  Siyuan Note
+</a>
   </div>
 </body>
 </html>
