--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://img.icons8.com/ios-filled/50/ffffff/settings.png" type="image/png">
   <title>Meus Serviços</title>
   <style>
@@ -58,8 +59,13 @@
       flex-shrink: 0;
     }
 
-    /* Responsividade para telas pequenas */
-    @media (max-width: 600px) {
+    /* Responsividade melhorada para telas até 900px */
+    @media (max-width: 900px) {
+      body {
+        height: auto;
+        padding: 20px 0;
+      }
+
       .btn-container {
         flex-direction: column;
         align-items: center;
@@ -84,6 +90,7 @@
   <h1>Bem-vindo! Escolha um serviço:</h1>
   <div class="btn-container">
     <a class="button" href="http://177.32.240.244:8080/" target="_blank">
+      <!-- CasaOS Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
         <path d="M541 229.16 512 206.52V104a24 24 0 0 0-24-24h-56a24 24 0 0 0-24 24v36.75L314.16 43a32 32 0 0 0-40.24 0L35 229.16a16 16 0 0 0-1.16 22.59l21.41 25.89a16 16 0 0 0 22.59 1.17L96 256.8V456a24 24 0 0 0 24 24h112V344a24 24 0 0 1 24-24h64a24 24 0 0 1 24 24v136h112a24 24 0 0 0 24-24V256.8l18.16 21.81a16 16 0 0 0 22.59-1.17l21.41-25.89a16 16 0 0 0-1.16-22.59z"/>
       </svg>
@@ -91,6 +98,7 @@
     </a>
 
     <a class="button" href="http://177.32.240.244:5050/" target="_blank">
+      <!-- E-mail Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path d="M502.3 190.8 327.4 338.2c-21.5 18.3-52.7 18.3-74.2 0L9.7 190.8C3.8 186 0 178.8 0 171V96c0-35.3 28.7-64 64-64h384c35.3 0 64 28.7 64 64v75c0 7.8-3.8 15-9.7 19.8zM0 224v192c0 35.3 28.7 64 64 64h384c35.3 0 64-28.7 64-64V224l-165.7 141c-33.5 28.5-82.1 28.5-115.6 0L0 224z"/>
       </svg>
@@ -98,6 +106,7 @@
     </a>
 
     <a class="button" href="http://177.32.240.244:5230/" target="_blank">
+      <!-- Ícone de Pena -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path d="M109.7 402.3c4.7-4.7 9.4-9.3 14.1-13.9L368 144c14.8-14.8 14.8-38.8 0-53.6s-38.8-14.8-53.6 0L70.2 334.7c-9.6 9.6-16.2 21.4-19.2 34.4L32 480l110.9-19c13-3 24.9-9.6 34.5-19.2l25.4-25.4c12.1 2.5 24.8 3.7 37.6 3.7 114.9 0 208-93.1 208-208 0-12.7-1.3-25.3-3.7-37.6l-25.4 25.4c-9.6 9.6-16.2 21.4-19.2 34.4L109.7 402.3z"/>
       </svg>
@@ -105,6 +114,7 @@
     </a>
 
     <a class="button" href="http://177.32.240.244:6806/" target="_blank">
+      <!-- Cubo -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path d="M256 0L32 128v256l224 128 224-128V128L256 0zm0 45.3l192 109.8v202.5L256 467.6 64 357.6V155.1L256 45.3zM128 192h256v32H128v-32zm0 96h192v32H128v-32z"/>
       </svg>
